force-app/main/default/objects/sugati__Images_AI__c/sugati__Images_AI__c.object-meta.xml
<CustomObject>
    <label>Images AI</label>
    <nameField>
        <displayFormat>AI-{000000}</displayFormat>
        <label>Images AI Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Images AI</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>