force-app/main/default/objects/sugati__Images_AI__c/fields/sugati__AI_Count__c.field-meta.xml
<CustomField>
    <fullName>sugati__AI_Count__c</fullName>
    <label>Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>