force-app/main/default/objects/sugati__Images_AI__c/fields/sugati__AI_Country__c.field-meta.xml
<CustomField>
    <fullName>sugati__AI_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>sugati__Country__c</referenceTo>
    <relationshipLabel>Images AI</relationshipLabel>
    <relationshipName>Images_AI</relationshipName>
    <type>Lookup</type>
</CustomField>