force-app/main/default/objects/sugati__Images_AI__c/fields/sugati__AI_Image_ID__c.field-meta.xml
<CustomField>
    <fullName>sugati__AI_Image_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Image ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>