force-app/main/default/objects/sugati__Images_AI__c/fields/sugati__AI_Parent_ID__c.field-meta.xml
<CustomField>
    <fullName>sugati__AI_Parent_ID__c</fullName>
    <label>Parent Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>