force-app/main/default/objects/sugati__Images_AI__c/fields/sugati__AI_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__AI_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipLabel>Images AI</relationshipLabel>
    <relationshipName>Images_AI</relationshipName>
    <type>Lookup</type>
</CustomField>