force-app/main/default/objects/sugati__Images_AI__c/fields/sugati__AI_User__c.field-meta.xml
<CustomField>
    <fullName>sugati__AI_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Images_AI</relationshipName>
    <type>Lookup</type>
</CustomField>