force-app/main/default/objects/sugati__Images_AI__c/fields/sugati__AI_Where_to_go__c.field-meta.xml
<CustomField>
    <fullName>sugati__AI_Where_to_go__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Where to go</label>
    <referenceTo>sugati__Where_to_go__c</referenceTo>
    <relationshipLabel>Images AI</relationshipLabel>
    <relationshipName>Images_AI</relationshipName>
    <type>Lookup</type>
</CustomField>